--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -2229,6 +2229,8 @@
         <span class="file-title">2025 Primary</span>
         <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Jara</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tohá</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Winter</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Mulet</a>        
       </li>
   </div>
 </section>
