--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -74,7 +74,7 @@
     .file-list li { padding: .6rem 0; }
     .file-list li + li { border-top: 1px dashed #ddd; }
 
-    .item-row { display: flex; align-items: flex-start; flex-wrap: wrap; gap: .25rem .5rem; }
+    .item-row { display: flex; align-items: center; flex-wrap: wrap; gap: .25rem .5rem; }
     .file-title { font-weight: 400; white-space: normal; word-break: break-word; }
     .file-meta { font-size: 12px; color: #666; margin-left: .25rem; }
     .muted { color: #6c757d; }
