--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -257,6 +257,7 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
   </div>
 </div>
 
