--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -419,7 +419,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -547,7 +548,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -730,7 +732,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -960,7 +963,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1074,7 +1078,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1203,7 +1208,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1316,7 +1322,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1437,7 +1444,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1550,7 +1558,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1655,7 +1664,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1720,7 +1730,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 <!-- CH 14 -->
@@ -1783,7 +1794,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 <!-- CH 15 -->
@@ -1903,7 +1915,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -1987,7 +2000,8 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#appendix">Appendix</a>
+ </div>
 </div>
 
 
@@ -2061,7 +2075,7 @@
   <div class="section-title"><strong>APPENDIX</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead mt-3"><strong>Documents</strong></div>
+    <div class="subhead mt-3"><strong>Presidential Election Manifestos</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">1958</span>
