--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -236,7 +236,7 @@
 
 <!-- Jump to chapters -->
 <div class="alert alert-light border jumpbar" id="chapters">
-  <div class="d-flex flex-wrap align-items-center gap-2">
+  <div class="d-flex flex-wrap align-items-center gap-2 ">
     <strong class="mr-2">Jump to chapter:</strong>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
@@ -2099,8 +2099,8 @@
       <li class="item-row">
         <span class="file-title">1989</span>
         <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Errázuriz</a>
       </li>
 
       <li class="item-row">
