--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@ Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloy
 <ul>
 
 
-<li><strong>Ex-Ante</strong>. <a href="Familia, farándula y política: el variopinto plantel de candidatos para el apetecido Distrito 10">Kenneth Bunker y negociación oficialista: “Haber incluido hasta la DC es una victoria del Partido Comunista”.</a> 23 August, 2025.</li>
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/familia-farandula-y-politica-el-variopinto-plantel-de-candidatos-para-el-apetecido-distrito-10/">Kenneth Bunker y negociación oficialista: “Haber incluido hasta la DC es una victoria del Partido Comunista”.</a> 23 August, 2025.</li>
+
+<li><strong>Diario Financiero</strong>. <a href="https://www.df.cl/economia-y-politica/politica/las-principales-pistas-para-entender-lo-que-hay-detras-de-la-animada">Las principales pistas para entender lo que hay detrás de la animada carrera por un escaño en el Congreso.</a> 20 August, 2025.</li>
 
 <li><strong>Nuevo Poder</strong>. <a href="https://www.nuevopoder.cl/competencia-en-distrito-11-la-apuesta-opositora-por-copar-los-seis-cupos/">Competencia en distrito 11: la apuesta opositora por copar los seis cupos.</a> 20 August, 2025.</li>
 
