--- a/theseus/index.html
+++ b/theseus/index.html
@@ -297,7 +297,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_1" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter1" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -356,7 +356,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_2" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter2" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -414,7 +414,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_3" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter3" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -473,7 +473,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_4" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter4" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -531,7 +531,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_5" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/UNM2S7" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter5" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -592,7 +592,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_6" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/JO4KUY" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter6" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -710,7 +710,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_8" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter8" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -768,7 +768,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_9" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/0GROZS" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter9" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -827,7 +827,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_10" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter10" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -885,7 +885,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_11" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter11" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -944,7 +944,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_12" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/JCFVYX" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter12" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -1002,7 +1002,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_13" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter13" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -1061,7 +1061,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_14" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter14" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -1119,7 +1119,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_15" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/NRRSIX" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter15" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -1179,7 +1179,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_16" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/S6243I" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter16" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -1237,7 +1237,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_17" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter17" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -1298,7 +1298,7 @@
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align: left; max-width: 600px; margin: 0 auto;">
@@ -1356,7 +1356,7 @@
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align: left; max-width: 600px; margin: 0 auto;">
